--- a/main.css
+++ b/main.css
@@ -20,3 +20,13 @@ td {
 td.out {
     color: #f22a2a;
 }
+
+input[type="search"] {
+    display: block;
+    margin: 50px auto -40px auto;
+    border: 1px solid #e5e5e5;
+    height: 30px;
+    width: 300px;
+    border-radius: 6px;
+    outline: none;
+}
